layout with grid

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
 	padding: 20px 40px;
-	margin-bottom: 60px;
+	/* margin-bottom: 60px; */
 	/* height: 80px; */
 }
 
@@ -37,7 +37,7 @@ nav {
 }
 
 article {
-	margin-bottom: 60px;
+	/* margin-bottom: 60px; */
 }
 
 .post-header {
@@ -363,7 +363,9 @@ footer {
 	font-weight: normal;
 	font-style: italic;
 }
-.row {
+
+/* FLEXBOX LAYOUT*/
+/* .row {
 	display: flex;
 	gap: 75px;
 	margin-bottom: 60px;
@@ -376,4 +378,35 @@ article {
 }
 aside {
 	flex: 0 0 300px;
+} 
+	*****************************/
+
+/* GRID LAYOUT */
+.container {
+	display: grid;
+	grid-template-columns: 2fr 300px;
+	align-items: start;
+	column-gap: 75px;
+	row-gap: 60px;
+}
+
+.main-header {
+	grid-column: 1 / -1;
+	margin: 0;
+}
+
+article {
+	grid-column: 1 / 2;
+	margin: 0;
+}
+
+aside {
+	grid-column: 2 / 3;
+	grid-row: 2;
+	/* align-self: start; */
+}
+
+footer {
+	grid-column: 1 / -1;
+	background-color: #f7f7f7;
 }
